--- a/view/index.html
+++ b/view/index.html
@@ -9,27 +9,26 @@
         Hi  websocket!!!
 
         <input type="text" value="" id="text">
-        <button type="submit" id="btn_submit" onclick="btnAction()"> submit </button>
+        <button type="submit" id="btn_submit" onclick="btnAction1()"> submit </button>
 </body>
 </html>
 <script>
-    let socket = new WebSocket("ws://127.0.0.1:8199/v1.0/api/ws")
+    let socket = new WebSocket("ws://127.0.0.1:8199/ws")
     console.log("Attempting Connection...");
 
     socket.onopen = () => {
         console.log("Successfully Connected");
+        socket.send("hello i am client ! ")
     };
 
-    function btnAction()        {
-        let v = document.getElementById("text").value
+    function btnAction1()        {
+        let v = $('#text').val()
         socket.send(v)
     }
 
-
     //接收到消息的回调方法
     socket.onmessage = function (event) {
-        console.log("event",event)
-            alert("okokok")
+            alert(event)
         }
 
 
